-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 14, 15
-
Component/s: hotspot
-
b06
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8238551 | 14.0.2 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
| JDK-8238886 | 14.0.1 | Roland Westrelin | P3 | Resolved | Fixed | b04 |
# Internal Error (src/hotspot/share/opto/type.hpp:1605), pid=369466, tid=369476
# assert(_base == Tuple) failed: Not a Tuple
reported on 11:
https://mail.openjdk.java.net/pipermail/shenandoah-dev/2020-January/011249.html
# assert(_base == Tuple) failed: Not a Tuple
reported on 11:
https://mail.openjdk.java.net/pipermail/shenandoah-dev/2020-January/011249.html
- backported by
-
JDK-8238551 Shenandoah: assert(_base == Tuple) failure during C2 compilation
-
- Resolved
-
-
JDK-8238886 Shenandoah: assert(_base == Tuple) failure during C2 compilation
-
- Resolved
-