8237007: Shenandoah: assert(_base == Tuple) failure during C2 compilation

Reviewed-by: thartmann, rkennke